--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <div>
             este es el primer codigo
+            <p>look this is an updated version of this page within a p tag</p>
         </div>
     </body>
 
